name:                99problems
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/99problems#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable 99problems
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , criterion

library
  hs-source-dirs:      src
  exposed-modules:     P11P20
                     , P21P28
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010

benchmark bench-99problems
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          BenchAll.hs
  build-depends:    base, deepseq, ghc-prim,
                    criterion, 99problems
  ghc-options:      -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
                    -fspec-constr-count=6
